Fixed alignment of three blocks to justified.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,11 @@ h1 {
     padding: 10px;
     min-height: 300px;
 }
-.grid-recipes > .holder, .list-recipes > .holder {
+.home-squares {
+    padding: 10px;
+    min-height: 360px;
+}
+.grid-recipes > .holder, .list-recipes > .holder, .home-squares > .holder {
     background: #FFF;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -116,12 +120,12 @@ h1 {
     -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.2);
     box-shadow:         0px 0px 3px 2px rgba(0,0,0,0.2);
 }
-.grid-recipes > .holder:hover, .list-recipes > .holder:hover {
+.grid-recipes > .holder:hover, .list-recipes > .holder:hover, .home-squares > .holder:hover {
     -moz-box-shadow:    0px 0px 3px 2px rgba(0,0,0,0.5);
     -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.5);
     box-shadow:         0px 0px 3px 2px rgba(0,0,0,0.5);
 }
-.grid-recipes > .holder .preview-img {
+.grid-recipes > .holder .preview-img, .home-squares > .holder .preview-img {
     -webkit-border-top-left-radius: 3px;
     -moz-border-top-left-radius: 3px;
     border-top-left-radius: 3px;
@@ -179,7 +183,7 @@ h1 {
     color: #EEE;
     background: #383838;
     padding-bottom: 5px;
-	padding-top:5px;
+    padding-top:5px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -193,15 +197,15 @@ h1 {
     margin-right: -6px;
 }
 .grid-recipes .holder > div p:after{
- border-color:  #383838 transparent transparent #383838;
- border-style:solid;
- border-width: 3px;
- height:0px;
- width:0px;
- position: absolute;
- right: -6px;
- margin-top: 25px;
- content: "";
+   border-color:  #383838 transparent transparent #383838;
+   border-style:solid;
+   border-width: 3px;
+   height:0px;
+   width:0px;
+   position: absolute;
+   right: -6px;
+   margin-top: 25px;
+   content: "";
 }
 .grid-recipes .holder > div p:before{
     border-color: #383838 #383838 transparent transparent;
@@ -213,6 +217,10 @@ h1 {
     left: -6px;
     margin-top: 25px;
     content: "";
+}
+
+.home-squares {
+
 }
 
 div p a {
